--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.3",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   }
 }
